# metatranscribe

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: export.py  ingest.py  reconcile.py  reexport.py  run_pipeline.py  serve_web.py  transcribe.py
src/metatranscribe/: __init__.py  config.py  logging_utils.py  orchestrator.py
src/metatranscribe/ingest/: manual_inbox.py
src/metatranscribe/llm/: __init__.py  http_client.py
src/metatranscribe/output/: io.py  polish_markdown.py  publish.py
src/metatranscribe/postprocess/: silence_annotations.py
src/metatranscribe/preprocess/: audio_prep.py
src/metatranscribe/reconcile/: chunking.py  llm_reconciler.py  prompt_builder.py
src/metatranscribe/state/: store.py
src/metatranscribe/transcribe/: base.py  deepgram_adapter.py  local_whisper_adapter.py  openai_adapter.py  runner.py
src/metatranscribe/web/: __init__.py  app.py  auth.py  transcripts.py  worker.py
src/recorder_transcribe/: __init__.py  config.py  models.py  orchestrator.py
tests/: test_audio_prep_chunk_overlap.py  test_chunking.py  test_config.py  test_llm_reconciler_errors.py  test_llm_reconciler_io_artifacts.py  test_llm_reconciler_json_extract.py  test_markdown_writer.py  test_openai_adapter.py  test_orchestrator_behavior.py  test_output_io.py  test_output_polish_markdown.py  test_output_publish.py  test_prompt_builder.py  test_reconcile_chunk_manifest.py  test_reconciler_provider.py  test_silence_annotations.py  test_state_store.py  test_transcribe_chunk_merge.py  test_web_app.py  test_web_auth.py  test_web_worker.py
(+19 files in other folders)
